@@ -3,8 +3,11 @@ linux-tools (3.16-2~bpo70+1) wheezy-backports; urgency=low
   * Rebuild for wheezy
     - Replace build-dependency on libunwind8-dev with libunwind7-dev
     - perf: Work-around Perl bool definition conflict
+  * linux-tools: Fix build configuration to avoid linking perf with libbfd
+    (Closes: #763002)
+  * linux-tools: Add a check that perf is not linked with libbfd
 
- -- Ben Hutchings <ben@decadent.org.uk>  Sun, 21 Sep 2014 19:22:08 +0100
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 27 Sep 2014 02:39:21 +0100
 
 linux-tools (3.16-2) unstable; urgency=medium
 
